--- a/trunk/glvnsjc/pom.xml
+++ b/trunk/glvnsjc/pom.xml
@@ -77,24 +77,6 @@
     </dependency>
 
     <!-- ================================================================== -->
-    <!--  JPA + Provider                                                             -->
-    <!-- ================================================================== -->
-
-    <!-- 
-      <dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>persistence-api</artifactId>
-      <version>1.0</version>
-      </dependency>
-    -->
-
-    <dependency>
-      <groupId>org.apache.openjpa</groupId>
-      <artifactId>openjpa</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-
-    <!-- ================================================================== -->
     <!--  JDBC                                                              -->
     <!-- ================================================================== -->
 
@@ -159,18 +141,6 @@
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
       <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.faces</groupId>
-      <artifactId>jsf-api</artifactId>
-      <version>1.2_08</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.faces</groupId>
-      <artifactId>jsf-impl</artifactId>
-      <version>1.2_08</version>
     </dependency>
 
     <dependency>
@@ -336,12 +306,105 @@
   </build>
 
 
+  <profiles>
+
+    <!--=============================================================
+         JSF Provider
+    ===============================================================-->
+  
+    <profile>
+      <id>jsfri</id>
+      <activation>
+        <property>
+          <name>!jsf</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>javax.faces</groupId>
+          <artifactId>jsf-api</artifactId>
+          <version>${jsfri.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>javax.faces</groupId>
+          <artifactId>jsf-impl</artifactId>
+          <version>${jsfri.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+  
+    <profile>
+      <id>jsf-myface</id>
+      <activation>
+        <property>
+          <name>jsf</name>
+          <value>myfaces</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.myfaces.core</groupId>
+          <artifactId>myfaces-api</artifactId>
+          <version>${jsfmyfaces.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.myfaces.core</groupId>
+          <artifactId>myfaces-impl</artifactId>
+          <version>${jsfmyfaces.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    
+    
+    <!--=============================================================
+         JPA Provider
+    ===============================================================-->
+    <profile>
+      <id>jpa-openjpa</id>
+      <activation>
+        <property>
+          <name>!jpa</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.openjpa</groupId>
+          <artifactId>openjpa</artifactId>
+          <version>${openjpa.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+
+
+    <profile>
+      <id>jpa-hibernate</id>
+      <activation>
+        <property>
+          <name>jpa</name>
+          <value>hibernate</value>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-annotations</artifactId>
+          <version>3.3.1.GA</version>
+        </dependency>
+      </dependencies>
+    </profile>
+     
+  </profiles>
+  
   <properties>
     <secondary.resource.directory>${project.build.directory}/resources/org/glvnsjc</secondary.resource.directory>
     <build.properties.file>${secondary.resource.directory}/build.properties</build.properties.file>
-    <derby.version>10.3.2.1</derby.version>
+    
+    <openjpa.version>1.0.2</openjpa.version>
+    <derby.version>10.4.1.3</derby.version>
     <spring.version>2.5.4</spring.version>
     <aspectj.version>1.5.3</aspectj.version>
+    <jsfri.version>1.2_08</jsfri.version>
+    <jsfmyfaces.version>1.2.1</jsfmyfaces.version>
   </properties>
 
 </project>
