--- a/trunk/glvnsjc/pom.xml
+++ b/trunk/glvnsjc/pom.xml
@@ -22,37 +22,7 @@
     ${pom.name} is a web database application. It keeps track of students and instructors historical information.
   </description>
 
-  <distributionManagement>
-    <repository>
-      <id>glvnsjc.repo</id>
-      <name>glvnsjc central repository</name>
-      <url>dav:http://glvnsjc.homedns.org/webdav/maven2</url>
-    </repository>
-    <snapshotRepository>
-      <id>glvnsjc.snapshot</id>
-      <name>glvnsjc snapshot repository</name>
-      <url>dav:http://glvnsjc.homedns.org/webdav/snapshots</url>
-    </snapshotRepository>
-    <site>
-      <id>glvnsjc.site</id>
-      <name>glvnsjc web site</name>
-      <url>dav:http://glvnsjc.homedns.org/webdav/site</url>
-    </site>
-  </distributionManagement>
 
-  <scm>
-    <connection>scm:svn:https://glvnsjc.dev.java.net/svn/glvnsjc/trunk/glvnsjc</connection>
-    <developerConnection>scm:svn:https://glvnsjc.dev.java.net/svn/glvnsjc/trunk/glvnsjc</developerConnection>
-    <url>https://glvnsjc.dev.java.net/source/browse/glvnsjc/trunk/glvnsjc</url>
-  </scm>
-
-  <repositories>
-    <repository>
-      <id>java-net</id>
-      <url>http://download.java.net/maven/1</url>
-      <layout>legacy</layout>
-    </repository>
-  </repositories>
 
   <!--  use this to override transitive dependency -->
   <dependencyManagement>
@@ -400,7 +370,7 @@
     <secondary.resource.directory>${project.build.directory}/resources/org/glvnsjc</secondary.resource.directory>
     <build.properties.file>${secondary.resource.directory}/build.properties</build.properties.file>
 
-    <openjpa.version>1.0.2</openjpa.version>
+    <openjpa.version>1.1.0-SNAPSHOT</openjpa.version>
     <derby.version>10.4.1.3</derby.version>
     <spring.version>2.5.4</spring.version>
     <aspectj.version>1.5.3</aspectj.version>
