--- a/trunk/glvnsjc/src/test/resources/org/glvnsjc/test/resources.properties
+++ b/trunk/glvnsjc/src/test/resources/org/glvnsjc/test/resources.properties
@@ -7,6 +7,11 @@ mail.default.from=me
 jpa.showSql=true
 jpa.generateDdl=true
 jpa.databasePlatform=
+hibernate.showsql=true
+hibernate.schema=create-drop
+
+openjpa.showsql=DefaultLevel=WARN,SQL=TRACE
+openjpa.schema=buildSchema(SchemaAction='add')
 
 #HSQLDB
 jpa.database=HSQL
@@ -14,6 +19,9 @@ jdbc.driver=org.hsqldb.jdbcDriver
 jdbc.url=jdbc:hsqldb:${basedir}/target/hsqldb/hsqldb;shutdown=true
 jdbc.username=sa
 jdbc.password=
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+
 
 #hibernate.dialect=org.hibernate.dialect.DerbyDialect
 #jdbc.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
